feat: implement login with error handling and validation
- Add client-side form validation
- Map API errors to specific fields based on HTTP status codes
- Display field-specific errors with ErrorSummary component
- Implement JWT authentication and auto-redirect on success

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@digdir/designsystemet-css": "^1.7.1",
     "@digdir/designsystemet-react": "^1.7.1",
     "@digdir/designsystemet-theme": "^1.7.1",
+    "axios": "^1.13.1",
+    "jwt-decode": "^4.0.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
