--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts",
     ".next\\dev/types/**/*.ts",
-    ".next\\dev/types/**/*.ts"
+    ".next\\dev/types/**/*.ts",
+    "app/assets/assets.js"
   ],
   "exclude": ["node_modules"]
 }
